test/error/error.input93.zc
Unknown variable:fred on line 1
